# BudAIFoundry-SDK

./: .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md  index.md  quickstart.md
docs/a2a/: agent-discovery.md  index.md  send-message.md  task-management.md
docs/api/: chat.md  classifications.md  code_interpreter.md  embeddings.md  models.md  responses.md  telemetry.md
docs/observability/: advanced.md  auto-instrumentation.md  index.md  track-decorator.md
examples/: a2a_example.py  code_interpreter_custom_template.py  dapr_internal.py  inference_example.py  model_lifecycle.py  observability_example.py  simple_pipeline.py  track_example.py  track_stream_example.py
examples/observability/: fastapi_instrumentation.py  query_telemetry.py  rag_pipeline.py  track_inference.py  track_non_streaming.py  track_responses.py  track_streaming.py
plans/: feat-openai-compatible-inference-api.md
specs/: observability-plan.md  observability-spec.md  observability-tasks.md
specs/otel-observability/: plan.md  spec.md  task.md  tasks.md
src/bud/: __init__.py  __main__.py  _a2a_streaming.py  _config.py  _http.py  _jsonrpc.py  _response_streaming.py  _streaming.py  auth.py  client.py  dsl.py  exceptions.py
src/bud/cli/: __init__.py  _utils.py  action.py  auth.py  config.py  execution.py  main.py  pipeline.py  run.py
src/bud/models/: __init__.py  a2a.py  action.py  audit.py  auth.py  benchmark.py  cluster.py  code_interpreter.py  common.py  event.py  execution.py  inference.py  pipeline.py  schedule.py  telemetry.py  webhook.py
src/bud/observability/: __init__.py  _attributes.py  _baggage.py  _config.py  _exporter.py  _genai_attributes.py  _inference_tracker.py  _instrumentors.py  _logging.py  _noop.py  _propagation.py  _provider.py  _responses_tracker.py  _state.py  _stream_wrapper.py  _track.py
src/bud/resources/: __init__.py  _base.py  a2a.py  actions.py  agents.py  audit.py  auth.py  benchmarks.py  clusters.py  code_interpreter.py  events.py  executions.py  inference.py  observability.py  pipelines.py  schedules.py  webhooks.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_jwt_flow.py  test_live_api.py  test_pipelines_live.py
tests/test_observability/: test_attach.py  test_baggage.py  test_config.py  test_configure_client.py  test_e2e.py  test_exporter.py  test_inference_integration.py  test_inference_tracker.py  test_instrumentors.py  test_logging.py  test_noop.py  test_provider.py  test_responses_integration.py  test_responses_tracker.py  test_state.py  test_track.py
tests/unit/: test_a2a.py  test_audit.py  test_auth_apikey.py  test_auth_base.py  test_auth_dapr.py  test_auth_jwt.py  test_benchmarks.py  test_cli_auth.py  test_client.py  test_client_auth.py  test_client_config.py  test_clusters.py  test_dsl.py  test_executions.py  test_http_auth.py  test_http_refresh.py  test_inference.py  test_pipelines.py  test_resource_auth.py  test_response_streaming.py  test_responses.py
(+4 files in other folders)
